--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title">Skills</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -310,7 +310,30 @@
               </button>
             </div>
           </div>
-
+ <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Zenith-Mart: Ecommerce app</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/gitxAnkit/E-Commerce'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://calm-elf-6ca540.netlify.app/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -319,17 +342,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Movie app</h2>
+            <h2 class="experience-sub-title project-title">Zing-bites: Food delivery app</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/gitxAnkit/webflix'"
+                onclick="location.href='https://github.com/gitxAnkit/zing-bites-frontend_v2'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://webflix-xi.vercel.app/'"
+                onclick="location.href='https://zing-bites-frontend-v2.vercel.app/'"
               >
                 Live Demo
               </button>
