--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img id="profile-pic" src="./assets/myProfile.jpeg" alt="Ankit profile picture" />
+        <img
+          id="profile-pic"
+          src="./assets/myProfile.jpeg"
+          alt="Ankit profile picture"
+        />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -57,18 +61,17 @@
         </div>
         <div id="socials-container">
           <img
-          src="./assets/linkedin.png"
-          alt="My LinkedIn profile"
-          class="icon"
-          onclick="window.open('https://www.linkedin.com/in/ankit-verma-b3a497216/', '_blank')"
-        />
-        
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon"
+            onclick="window.open('https://www.linkedin.com/in/ankit-verma-b3a497216/', '_blank')"
+          />
+
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-          onclick="window.open('https://github.com/gitxAnkit', '_blank')"
-
+            onclick="window.open('https://github.com/gitxAnkit', '_blank')"
           />
         </div>
       </div>
@@ -107,13 +110,13 @@
           </div>
           <div class="text-container">
             <p>
-              Hi I'm Ankit, a software engineering student and a full-stack developer
-              with a passion for solving real-world problems through technology.
-              I enjoy diving into projects that challenge my skills, 
-              whether it's building a full-stack e-commerce app or experimenting with new frameworks.
-              I'm always eager to learn and collaborate with others, 
-              and I believe that coding is not just about writing lines of code but creating solutions
-              that make life easier.
+              Hi I'm Ankit, a software engineering student and a full-stack
+              developer with a passion for solving real-world problems through
+              technology. I enjoy diving into projects that challenge my skills,
+              whether it's building a full-stack e-commerce app or experimenting
+              with new frameworks. I'm always eager to learn and collaborate
+              with others, and I believe that coding is not just about writing
+              lines of code but creating solutions that make life easier.
             </p>
           </div>
         </div>
@@ -248,7 +251,7 @@
                   <p>Intermediate</p>
                 </div>
               </article>
-               <article>
+              <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
@@ -258,7 +261,7 @@
                   <h3>MySQL</h3>
                   <p>Intermediate</p>
                 </div>
-              </article> 
+              </article>
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -294,7 +297,9 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Zenith-Mart: Ecommerce app</h2>
+            <h2 class="experience-sub-title project-title">
+              Zenith-Mart: Ecommerce app
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -310,30 +315,7 @@
               </button>
             </div>
           </div>
- <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-1.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Zenith-Mart: Ecommerce app</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/gitxAnkit/E-Commerce'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://calm-elf-6ca540.netlify.app/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -342,7 +324,9 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Zing-bites: Food delivery app</h2>
+            <h2 class="experience-sub-title project-title">
+              Zing-bites: Food delivery app
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -409,7 +393,11 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/ankit-verma-b3a497216">LinkedIn</a></p>
+          <p>
+            <a href="https://www.linkedin.com/in/ankit-verma-b3a497216"
+              >LinkedIn</a
+            >
+          </p>
         </div>
       </div>
     </section>
