--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.jpeg"
+                src="./assets/project-zb.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -361,6 +361,30 @@
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://admin-dashboard-gilt-kappa-82.vercel.app/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 4"
+                class="project-3"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Movie app</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/gitxAnkit/webflix'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://webflix-xi.vercel.app/'"
               >
                 Live Demo
               </button>
