--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project-3.jpeg"
                 alt="Project 4"
-                class="project-3"
+                class="project-img"
               />
             </div>
             <h2 class="experience-sub-title project-title">Movie app</h2>
